--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <title>Empire of Sindria</title>
 
   <!-- font-->
-  <link href="https://raw.githubusercontent.com/nHexanol/ESI-webserver/main/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="http://www.empireofsindria.com/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- stylesheet -->
-  <link href="https://raw.githubusercontent.com/nHexanol/ESI-webserver/main/css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="http://www.empireofsindria.com/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -250,21 +250,21 @@
   </a>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="https://raw.githubusercontent.com/nHexanol/ESI-webserver/main/vendor/jquery/jquery.min.js"></script>
-  <script src="https://raw.githubusercontent.com/nHexanol/ESI-webserver/main/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="http://www.empireofsindria.com/jquery.min.js"></script>
+  <script src="http://www.empireofsindria.com/bootstrap.bundle.min.js"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="https://raw.githubusercontent.com/nHexanol/ESI-webserver/main/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="http://www.empireofsindria.com/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="https://raw.githubusercontent.com/nHexanol/ESI-webserver/main/js/sb-admin-2.min.js"></script>
+  <script src="http://www.empireofsindria.com/sb-admin-2.min.js"></script>
 
   <!-- Page level plugins -->
-  <script src="https://raw.githubusercontent.com/nHexanol/ESI-webserver/main/chart.js/Chart.min.js"></script>
+  <script src="http://www.empireofsindria.com/Chart.min.js"></script>
 
   <!-- Page level custom scripts -->
-  <script src="js/demo/chart-area-demo.js"></script>
-  <script src="js/demo/chart-pie-demo.js"></script>
+  <script src="http://www.empireofsindria.com/chart-area-demo.js"></script>
+  <script src="http://www.empireofsindria.com/chart-pie-demo.js"></script>
 
 </body>
 </html>
